Sackgassen zeigen, manuelles Auswählen von zu löschenden ermöglicht.